<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="80dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="10dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="10dip"
                android:background="@drawable/jiantou_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/phone_login"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/regButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/phone_reg"
            android:textColor="@color/blue"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/common_round_bg"
            android:drawableLeft="@drawable/yonhuming"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:paddingLeft="8dp"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/common_round_bg"
            android:drawableLeft="@drawable/mima"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:hint="@string/phone_pwd"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/common_round_blue_bg"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pwd_text"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>
