<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/common_back_btn_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/phone_reg"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/common_round_bg"
            android:gravity="center_vertical"
            android:hint="+86 输入手机号"
            android:inputType="phone"
            android:paddingLeft="8dp"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <CheckedTextView
                android:id="@+id/seller"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:background="@drawable/common_button"
                android:checked="true"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:text="@string/seller"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <CheckedTextView
                android:id="@+id/model"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="@drawable/common_button"
                android:gravity="center"
                android:text="商家"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/next_step"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/common_round_blue_bg"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>
